fix: work 2 components
