# cinema-api-service/app.js
@@ -17,5 +17,8 @@ SwaggerExpress.create(config, function (err, swaggerExpress) {
   var port = process.env.PORT || 10010;
   app.listen(port);
 
+  if (swaggerExpress.runner.swagger.paths["/map"]) {
+    console.log("try this:\ncurl http://127.0.0.1:" + port + "/api/v1/map");
+  }
   console.log('try this:\ncurl http://127.0.0.1:' + port + '/api/v1/weekly');
 });
